2006-07-24  Luca Ferreti  <elle.uca@libero.it>

	* legacy-icon-mapping.xml: Add more links for view-fullscreen icon

2006-07-24  Luca Ferreti  <elle.uca@libero.it>

	* legacy-icon-mapping.xml: Add links for window-close icon

2006-07-10  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up version to 0.7.3 for release

2006-07-10  Niko Mirthes  <nmirthes@gmail.com>

	* legacy-icon-mapping.xml: Update with some changes for KDE

2006-07-09  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Move the link for the
	gnome-settings-accessibility-technnologies name to the standard
	preferences-desktop-accessibility icon
	Remove preferences-desktop-assistive-technology
	Add a link for gnome-modem to modem under devices

2006-07-08  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add link for application/x-scribus

	Fixes http://bugzilla.gnome.org/show_bug.cgi?id=168873

2006-06-29  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add link for application/x-gzpostscript

	Fixes http://bugzilla.gnome.org/show_bug.cgi?id=317416

2006-06-29  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add links for various realmedia types

	Fixes http://bugzilla.gnome.org/show_bug.cgi?id=340550

2006-05-10  Daniele Favara <danjele@gmail.com>

	* legacy-icon-mapping.xml: Add some links for XFCE

2006-04-21  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up version to 0.7.2 for release

2006-04-21  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add gnome-character-map as a link
	Add system-floppy as a link to the media-floppy icon
	Add links for a few missing package types
	Add a link for opendocument text-web to text-html
	Add x-office-*-template icons and links to them
	Add x-office-drawing icon and links to it
	Add links for specific folder-remote share types to preempt the links
	to the generic folder-remote icon

2006-04-18  Rodney Dawes  <dobey@novell.com>
