@@ -1,3 +1,8 @@
+2006-07-24  Rodney Dawes  <dobey@novell.com>
+
+	* legacy-icon-mapping.xml: Add links for new view-restore icon
+	This icon is the opposite action of view-fullscreen
+
 2006-07-24  Luca Ferreti  <elle.uca@libero.it>
 
 	* legacy-icon-mapping.xml: Add more links for view-fullscreen icon
